# mbox-parser

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: README.md
docs/briefs/: project-brief.md
docs/plans/: gmail-mbox-parser.md
src/mbox_parser/: __main__.py  chat.py  cli.py  db.py  extractors.py  parser.py
tests/: test_chat.py  test_db.py  test_extractors.py  test_parser.py
